--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name"          : "node-google-translate",
   "description"   : "Simple library for talking to Google's Translate API.",
-  "version"       : "0.1",
+  "version"       : "0.1.0",
   "author"        : "Mike Holly",
   "homepage"      : "http://github.com/mikejholly/node-google-translate",
   "repository"    : {"type" : "git", "url" : "http://github.com/mikejholly/node-google-translate.git"},
-  "dependencies"  : [],
+  "dependencies"  : ["request", "underscore", "querystring"],
   "main"          : "./lib/translate.js",
   "keywords"      : ["i18n", "l10n"]
 }
